2007-01-09  Stipe Tolj  <stolj at kannel.org>
    * test/decode_emimsg.c: adding a simple tool that decodes a EMI/UCP stream
      PDU and prints more readable informations about it. Thanks to Vincent.
      [Msg-Id: <1ad701c6e08d$88bee420$9600a8c0@vince>]
    
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: fixing segfault in MIME multipart parsing. Thanks to Paul
      for providing the patch, and Vincent and Martin for review.
      [Msg-Id: <D19E3735-BE32-4934-987A-B9D6A3BA31CB@dsmagic.com>]
      
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * */*: update LICENSE preamble block to 2007.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gwlib/charset.c: removing Alex's debugging octstr_dump() calls from 
      charset_utf8_to_gsm(). NLC.
    
2007-01-08  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c: enhancing the faked DLR support. Now we pass the ACK
      of the MT first to abstraction layer, in order to obtain SMSC success DLR,
      then care about the final DLR indicating success.

2007-01-08  Stipe Tolj  <stolj at kannel.org>
	* gw/dlr.h: fixing typo for DLR_SMSC_FAIL macro, obviously this is 0x16.

2007-01-07  Stipe Tolj  <stolj at kannel.org>
    * gwlib/charset.[ch]: re-add prototypes and function charset_latin1_to_gsm()
      and charset_gsm_to_latin1() for the sake of backward compatibility of 
      external boxes using Kannel core libs. This should be reviewed and merged
      into single array for latin1 and utf-8 transcoding values.

2007-01-07  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.h: adding macro DLR_IS_NOT_FINAL() for non-final DLR status mask.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gw/sms.c: fixed wrong length calculation for concatenated
      messages. UDH send always as octets.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: fixed warning: inlining failed in call to
      'octstr_convert_printable': function body not available.
